ProveIt_Project/Code/proto_v0.19/proveit/frontend/client-configs/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ht-website
    app.kubernetes.io/component: ht-website
    app.kubernetes.io/instance: ht-website
  name: ht-website
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      deployment: ht-website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftNewApp
      creationTimestamp: null
      labels:
        deployment: ht-website
        app: ht-website
    spec:
      serviceAccountName: proveit-sa-admin
      containers:
        - env:
          - name: name
            value: ht-website
          - name: VITE_SERVER
            value: <PATCH_ME>
          image: <PATCH_ME>
          imagePullPolicy: Always
          name: ht-website
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
