ProveIt_Project/Code/proto_v0.19/proveit/frontend/client-configs/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: ht-website
    app.kubernetes.io/component: ht-website
    app.kubernetes.io/instance: ht-website
  name: ht-website
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: ht-website
    weight: 100
  wildcardPolicy: None
